tests/baselines/reference/badArrayIndex.errors.txt
==== tests/cases/compiler/badArrayIndex.ts (2 errors) ====
    var results = number[];
                         ~
!!! error TS1003: Identifier expected.
                  ~~~~~~
!!! error TS2095: Could not find symbol 'number'.